Apply suggestions from code review
Co-authored-by: Marcus Ortiz <mportiz08@gmail.com>

--- a/SwiftDocCRender.docc/Info.plist
+++ b/SwiftDocCRender.docc/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
     <key>CFBundleName</key>
-    <string>Swift DocC Render</string>
+    <string>Swift-DocC-Render</string>
     <key>CFBundleDisplayName</key>
-    <string>Swift DocC Render</string>
+    <string>Swift-DocC-Render</string>
     <key>CFBundleIdentifier</key>
     <string>org.swift.swiftdoccrender</string>
     <key>CFBundleVersion</key>
