Prefer toolchain installed `docc` when available.
For previewing docs, the `rundocc` wrapper script will first try `xcrun
docc` to see if a toolchain provided tool can be used while still
falling back to any available `docc` binary found in `$PATH` otherwise.
This should reduce a little friction to preview docs for many users who
haven't manually built Swift-DocC themselves.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test:unit": "vue-cli-service test:unit",
     "test:unit:watch": "vue-cli-service test:unit --watch",
     "lint": "vue-cli-service lint",
-    "docs:preview": "docc preview ./SwiftDocCRender.docc",
-    "docs:build": "docc convert ./SwiftDocCRender.docc"
+    "docs:preview": "bin/rundocc preview SwiftDocCRender.docc",
+    "docs:build": "bin/rundocc convert SwiftDocCRender.docc"
   },
   "files": [
     "src",
