Add theme-setting feature flag for navigator.

--- a/app/public/theme-settings.json
+++ b/app/public/theme-settings.json
@@ -53,6 +53,9 @@
     "docs": {
       "summary": {
         "hide": false
+      },
+      "navigator": {
+        "enable": false
       }
     }
   }
