--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "webpack-theme-resolver-plugin": "3.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.17",
-    "@vue/cli-plugin-eslint": "^4.5.17",
-    "@vue/cli-plugin-unit-jest": "^4.5.17",
-    "@vue/cli-service": "^4.5.17",
+    "@vue/cli-plugin-babel": "^4.5.19",
+    "@vue/cli-plugin-eslint": "^4.5.19",
+    "@vue/cli-plugin-unit-jest": "^4.5.19",
+    "@vue/cli-service": "^4.5.19",
     "@vue/eslint-config-airbnb": "^5.3.0",
     "@vue/test-utils": "1.0.0-beta.27",
     "babel-eslint": "^10.1.0",
@@ -43,13 +43,13 @@
     "html-loader": "^1.3.2",
     "node-sass": "^6.0.1",
     "sass-loader": "^10.2.0",
-    "vue": "2.6.14",
+    "vue": "^2.7.10",
     "vue-router": "^3.5.2",
-    "vue-template-compiler": "2.6.14"
+    "vue-template-compiler": "^2.7.10"
   },
   "peerDependencies": {
-    "vue": "2.6.12",
-    "vue-router": "^3.4.9"
+    "vue": "^2.7.10",
+    "vue-router": "^3.5.2"
   },
   "engines": {
     "node": "14.17.4",
