--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-vue": "^7.11.1",
     "html-loader": "^1.3.2",
-    "node-sass": "^6.0.1",
+    "sass": "^1.55.0",
     "sass-loader": "^10.2.0",
     "vue": "^2.7.10",
     "vue-router": "^3.5.2",
