--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "jest": "^27.0.5",
     "sass": "^1.55.0",
     "sass-loader": "^12.0.0",
+    "tree-sitter": "^0.20.5",
+    "tree-sitter-vue": "^0.2.1",
     "vue": "^2.7.10",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.7.10"
