--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "highlight.js": "^11.3.1",
     "intersection-observer": "0.12.0",
     "portal-vue": "2.1.7",
+    "tree-sitter-javascript": "^0.20.1",
     "vue-i18n": "^8.28.2",
     "vue-virtual-scroller": "^1.1.2"
   },
