--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "sass-loader": "^12.0.0",
     "tree-sitter": "^0.20.5",
     "tree-sitter-javascript": "^0.20.1",
+    "tree-sitter-jsdoc": "^0.19.0",
     "tree-sitter-vue": "^0.2.1",
     "vue": "^2.7.10",
     "vue-router": "^3.5.2",
