--- a/package.json
+++ b/package.json
@@ -39,15 +39,15 @@
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-airbnb": "^6.0.0",
-    "@vue/test-utils": "^1.3.6",
-    "@vue/vue2-jest": "^29.2.6",
-    "babel-jest": "^29.7.0",
+    "@vue/test-utils": "1.0.0-beta.27",
+    "@vue/vue2-jest": "^27.0.0-alpha.2",
+    "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "html-loader": "^4.2.0",
-    "jest": "^29.7.0",
+    "jest": "^27.0.5",
     "sass": "^1.55.0",
     "sass-loader": "^12.0.0",
     "tree-sitter": "^0.20.5",
