--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "jest": "^27.0.5",
     "sass": "^1.55.0",
     "sass-loader": "^12.0.0",
-    "tree-sitter": "^0.20.5",
-    "tree-sitter-javascript": "^0.20.1",
+    "tree-sitter": "^0.20.6",
+    "tree-sitter-javascript": "^0.20.4",
     "tree-sitter-jsdoc": "^0.19.0",
     "tree-sitter-vue": "^0.2.1",
     "vue": "^2.7.10",
@@ -63,7 +63,7 @@
     "vue-router": "^3.5.2"
   },
   "engines": {
-    "node": "18.16.1",
-    "npm": "9.5.1"
+    "node": ">=18.16.1 <21",
+    "npm": ">=9.5.1"
   }
 }
