--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/eslint-config-airbnb": "^6.0.0",
-    "@vue/test-utils": "1.0.0-beta.27",
+    "@vue/test-utils": "1.3.6",
     "@vue/vue2-jest": "^27.0.0-alpha.2",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
