--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -20,4 +20,4 @@
 # overrides, and makes uncharted parts of the repository easier to pin down.
 
 # Default code owner of everything.
-* @marinaaisa @mportiz08
+* @swiftlang/swift-docc-codeowners
